add timeline section

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -12,7 +12,7 @@ block main
 
     include section/artist-profile
 
-    //- include section/timeline
+    include section/timeline
 
     include section/share-and-win
 
