--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -1,72 +1,57 @@
 .section.timeline
+  .bg-bubble
+
   .container
     #cd-timeline
       .cd-timeline-block
-          .cd-timeline-img
-
-
+          .get-your-best-deal
           .cd-timeline-content
-            h2 Title of section 1
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.
+            img(src="../img/timeline/timeline-1.png")
 
-            a.cd-read-more(href='#0') Read more
+      .cd-timeline-block
 
-            span.cd-date Jan 14
+        .cd-timeline-content.selebriti-comment
+          img(src="../img/timeline/timeline-2.png")
 
-        .cd-timeline-block
-          .cd-timeline-img
+      .cd-timeline-block
 
-          .cd-timeline-content
-            h2 Title of section 2
+        .cd-timeline-content.toko-selebritis
+          img(src="../img/timeline/timeline-3.png");
 
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?
+      .cd-timeline-block
 
-            a.cd-read-more(href='#0') Read more
+        .cd-timeline-content.incrane1212
+          img(src="../img/timeline/timeline-4.png");
 
-            span.cd-date Jan 18
+      .cd-timeline-block
 
-        .cd-timeline-block
-          .cd-timeline-img
+        .cd-timeline-content.daily-checkin
+          img(src="../img/timeline/timeline-5.png");
 
-          .cd-timeline-content
-            h2 Title of section 3
+      .cd-timeline-block
 
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.
+        .cd-timeline-content.love-share-win
+          img(src="../img/timeline/timeline-6.png");
 
-            a.cd-read-more(href='#0') Read more
+      .cd-timeline-block
 
-            span.cd-date Jan 24
+        .cd-timeline-content.lelang-barang-artis
+          img(src="../img/timeline/timeline-7.png");
 
-        .cd-timeline-block
-          .cd-timeline-img
+      .cd-timeline-block
 
-          .cd-timeline-content
-            h2 Title of section 4
+        .cd-timeline-content.pyramid-discount
+          img(src="../img/timeline/timeline-8.png");
 
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.
+      .cd-timeline-block
 
-            a.cd-read-more(href='#0') Read more
+        .cd-timeline-content.top-spender-competition
+          img(src="../img/timeline/timeline-9.png");
 
-            span.cd-date Feb 14
+      .cd-timeline-block
 
-        .cd-timeline-block
-          .cd-timeline-img
+        .cd-timeline-content.showoff1212
+          img(src="../img/timeline/timeline-10.png");
 
-          .cd-timeline-content
-            h2 Title of section 5
-
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.
-
-            a.cd-read-more(href='#0') Read more
-
-            span.cd-date Feb 18
-
-        .cd-timeline-block
-          .cd-timeline-img
-
-          .cd-timeline-content
-            h2 Final Section
-
-            p This is the content of the last section
-
-            span.cd-date Feb 26
+    .great-sale-bottom
+  .bubble-bottom
