--- a/static/css/shopee-1212.css
+++ b/static/css/shopee-1212.css
@@ -78,8 +78,11 @@ html[xmlns] .flexslider .slides {
   border: none;
   position: relative;
   zoom: 1;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
   border-radius: 0;
   -webkit-box-shadow: '' 0 0 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: '' 0 0 0 rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' 0 0 0 rgba(0, 0, 0, 0.2);
   box-shadow: '' 0 0 0 rgba(0, 0, 0, 0.2);
 }
@@ -93,6 +96,8 @@ html[xmlns] .flexslider .slides {
 .flex-viewport {
   max-height: 2000px;
   -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -122,6 +127,8 @@ html[xmlns] .flexslider .slides {
   color: rgba(0, 0, 0, 0.8);
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background: url(../img/slider-arraw.png) no-repeat 0 0;
@@ -134,8 +141,7 @@ html[xmlns] .flexslider .slides {
   .flex-direction-nav a {
     width: 21px;
     height: 32.5px;
-    -webkit-background-size: 42.5px 32.5px;
-            background-size: 42.5px 32.5px;
+    background-size: 42.5px 32.5px;
     margin-top: -15px;
   }
   .flex-direction-nav a.flex-next {
@@ -208,8 +214,11 @@ html[xmlns] .flexslider .slides {
   cursor: pointer;
   text-indent: -9999px;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   -o-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
   border-radius: 20px;
 }
 .flex-control-paging li a:hover {
@@ -239,6 +248,8 @@ html[xmlns] .flexslider .slides {
   cursor: pointer;
   -moz-user-select: none;
   -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -441,8 +452,7 @@ header #shopeemall .badge {
 .footer .appLogo {
   margin: 110px auto 55px;
   background: url("../img/appLogo.png") no-repeat center center;
-  -webkit-background-size: 150px 150px;
-          background-size: 150px 150px;
+  background-size: 150px 150px;
   height: 150px;
   width: 150px;
   display: block;
@@ -505,8 +515,7 @@ header #shopeemall .badge {
     font-size: 35px;
   }
   .footer .appLogo {
-    -webkit-background-size: contain;
-            background-size: contain;
+    background-size: contain;
     width: 100px;
     height: 100px;
     margin-top: 40px;
@@ -561,6 +570,8 @@ header #shopeemall .badge {
   display: block;
   margin: 0 0 15px 0;
   -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -606,8 +617,7 @@ header #shopeemall .badge {
 .share-and-win {
   min-height: 768px;
   background: #F4F4F4 url(../img/share-and-win-bg2.jpg) no-repeat center;
-  -webkit-background-size: cover;
-          background-size: cover;
+  background-size: cover;
 }
 @media (max-width: 480px) {
   .share-and-win {
@@ -690,6 +700,7 @@ header #shopeemall .badge {
   -webkit-box-shadow: inset 0 0 0 1px #23b29c;
   box-shadow: inset 0 0 0 1px #23b29c;
   -webkit-box-shadow: '' inset 0 0 0 1px #23b29c 1px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: '' inset 0 0 0 1px #23b29c 1px 2px rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' inset 0 0 0 1px #23b29c 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: '' inset 0 0 0 1px #23b29c 1px 2px rgba(0, 0, 0, 0.2);
 }
@@ -724,10 +735,6 @@ header #shopeemall .badge {
   .share-and-win .form-submit-email #mc_embed_signup form input.button {
     width: 80px;
   }
-}
-.section.timeline {
-  height: 3261px;
-  background: #fd470c url(../img/bg-timeline.jpg) repeat-x 0 0;
 }
 .testimony-section .subtitle {
   margin-bottom: 100px;
@@ -882,35 +889,69 @@ header #shopeemall .badge {
     right: -70px;
   }
 }
+.section.timeline {
+  position: relative;
+  padding-top: 0;
+  height: 3261px;
+  background: url(../img/timeline/bg-gradient.png) repeat-x top center;
+}
+.section.timeline > .container {
+  position: relative;
+  height: 3261px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.section .bubble-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 750px;
+  z-index: 1;
+  background: url(../img/timeline/bg-bottom.png) repeat-x bottom center;
+}
+.section .great-sale-bottom {
+  background: url(../img/timeline/great-sale-bottom.png) no-repeat top center;
+  width: 435px;
+  height: 384px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  z-index: 4;
+  margin-left: -217.5px;
+}
+.section .bg-bubble {
+  background: url(../img/timeline/bg-bubble.png) no-repeat top center;
+  position: absolute;
+  top: 0;
+  width: 1280px;
+  height: 100%;
+  left: 50%;
+  margin-left: -640px;
+}
 #cd-timeline {
   position: relative;
-  padding: 2em 0;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  padding: 0;
 }
 #cd-timeline::before {
   /* this is the vertical line */
   content: '';
   position: absolute;
   top: 0;
-  left: 18px;
-  height: 100%;
-  width: 4px;
-  background: #d7e4ed;
+  left: 0;
+  height: 2531px;
+  width: 92px;
+  background: url(../img/timeline/ruler.png) no-repeat 0 0;
 }
 @media only screen and (min-width: 1170px) {
-  #cd-timeline {
-    margin-top: 3em;
-    margin-bottom: 3em;
-  }
   #cd-timeline::before {
     left: 50%;
-    margin-left: -2px;
+    top: 185px;
+    margin-left: -25px;
   }
 }
 .cd-timeline-block {
   position: relative;
-  margin: 2em 0;
 }
 .cd-timeline-block:after {
   content: "";
@@ -920,12 +961,30 @@ header #shopeemall .badge {
 .cd-timeline-block:first-child {
   margin-top: 0;
 }
+.cd-timeline-block:first-child .get-your-best-deal {
+  width: 406px;
+  height: 264px;
+  background: url(../img/timeline/timeline-0.png) no-repeat 0 0;
+  position: absolute;
+  right: 20px;
+  top: 80px;
+}
+.cd-timeline-block:first-child .ico-shopee-flag {
+  display: block;
+  position: absolute;
+  left: 50%;
+  width: 75px;
+  height: 117px;
+  top: 193px;
+  margin-left: -7px;
+  background: url(../img/timeline/shopee-flag.png) no-repeat 0 0;
+}
 .cd-timeline-block:last-child {
   margin-bottom: 0;
 }
 @media only screen and (min-width: 1170px) {
   .cd-timeline-block {
-    margin: 4em 0;
+    margin: 0;
   }
   .cd-timeline-block:first-child {
     margin-top: 0;
@@ -934,118 +993,48 @@ header #shopeemall .badge {
     margin-bottom: 0;
   }
 }
-.cd-timeline-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 40px;
-  height: 40px;
-  background: url(../img/pinner.png) no-repeat center center;
-}
-.cd-timeline-img img {
-  display: block;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  margin-left: -12px;
-  margin-top: -12px;
-}
-.cd-timeline-img.cd-picture {
-  background: #75ce66;
-}
-.cd-timeline-img.cd-movie {
-  background: #c03b44;
-}
-.cd-timeline-img.cd-location {
-  background: #f0ca45;
-}
-@media only screen and (min-width: 1170px) {
-  .cd-timeline-img {
-    width: 60px;
-    height: 60px;
-    left: 50%;
-    margin-left: -30px;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-  }
-  .cssanimations .cd-timeline-img.is-hidden {
-    visibility: hidden;
-  }
-  .cssanimations .cd-timeline-img.bounce-in {
-    visibility: visible;
-    -webkit-animation: cd-bounce-1 0.6s;
-    -o-animation: cd-bounce-1 0.6s;
-       animation: cd-bounce-1 0.6s;
-  }
-}
-@-webkit-keyframes cd-bounce-1 {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-  }
-}
-@-o-keyframes cd-bounce-1 {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@keyframes cd-bounce-1 {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
-  }
-}
 .cd-timeline-content {
   position: relative;
-  margin-left: 60px;
-  background: white;
-  border-radius: 0.25em;
-  padding: 1em;
-  -webkit-box-shadow: 0 3px 0 #d7e4ed;
-          box-shadow: 0 3px 0 #d7e4ed;
+  text-align: right;
+}
+.cd-timeline-content.selebriti-comment {
+  margin-right: 35px;
+}
+.cd-timeline-content.toko-selebritis {
+  position: absolute;
+  left: 40px;
+  top: -110px;
+}
+.cd-timeline-content.incrane1212 {
+  margin-top: 140px;
+  margin-right: 105px;
+}
+.cd-timeline-content.daily-checkin {
+  position: absolute;
+  left: 40px;
+  top: -30px;
+}
+.cd-timeline-content.love-share-win {
+  margin-top: 200px;
+  right: 105px;
+}
+.cd-timeline-content.lelang-barang-artis {
+  position: absolute;
+  left: 40px;
+  top: -130px;
+}
+.cd-timeline-content.pyramid-discount {
+  margin-top: 135px;
+  right: 65px;
+}
+.cd-timeline-content.top-spender-competition {
+  position: absolute;
+  left: 40px;
+  top: -65px;
+}
+.cd-timeline-content.showoff1212 {
+  margin-top: 125px;
+  right: 60px;
 }
 .cd-timeline-content:after {
   content: "";
@@ -1084,16 +1073,6 @@ header #shopeemall .badge {
   padding: .8em 0;
   opacity: .7;
 }
-.cd-timeline-content::before {
-  content: '';
-  position: absolute;
-  top: 16px;
-  right: 100%;
-  height: 0;
-  width: 0;
-  border: 7px solid transparent;
-  border-right: 7px solid white;
-}
 @media only screen and (min-width: 768px) {
   .cd-timeline-content h2 {
     font-size: 20px;
@@ -1112,7 +1091,7 @@ header #shopeemall .badge {
 @media only screen and (min-width: 1170px) {
   .cd-timeline-content {
     margin-left: 0;
-    padding: 1.6em;
+    padding: 0;
     width: 45%;
   }
   .cd-timeline-content::before {
@@ -1120,17 +1099,6 @@ header #shopeemall .badge {
     left: 100%;
     border-color: transparent;
     border-left-color: white;
-  }
-  .cd-timeline-content .cd-read-more {
-    float: left;
-  }
-  .cd-timeline-content .cd-date {
-    position: absolute;
-    width: 100%;
-    left: 122%;
-    top: 6px;
-    font-size: 16px;
-    font-size: 1rem;
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content {
     float: right;
@@ -1144,6 +1112,7 @@ header #shopeemall .badge {
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
     float: right;
+    margin-right: 30px;
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
     left: auto;
@@ -1152,134 +1121,6 @@ header #shopeemall .badge {
   }
   .cssanimations .cd-timeline-content.is-hidden {
     visibility: hidden;
-  }
-  .cssanimations .cd-timeline-content.bounce-in {
-    visibility: visible;
-    -webkit-animation: cd-bounce-2 0.6s;
-    -o-animation: cd-bounce-2 0.6s;
-       animation: cd-bounce-2 0.6s;
-  }
-}
-@media only screen and (min-width: 1170px) {
-  /* inverse bounce effect on even content blocks */
-  .cssanimations .cd-timeline-block:nth-child(even) .cd-timeline-content.bounce-in {
-    -webkit-animation: cd-bounce-2-inverse 0.6s;
-    -o-animation: cd-bounce-2-inverse 0.6s;
-       animation: cd-bounce-2-inverse 0.6s;
-  }
-}
-@-webkit-keyframes cd-bounce-2 {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-  }
-}
-@-o-keyframes cd-bounce-2 {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100px);
-    -ms-transform: translateX(-100px);
-    -o-transform: translateX(-100px);
-    transform: translateX(-100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    transform: translateX(20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-@keyframes cd-bounce-2 {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100px);
-    -ms-transform: translateX(-100px);
-    -o-transform: translateX(-100px);
-    transform: translateX(-100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    transform: translateX(20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes cd-bounce-2-inverse {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(-20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-  }
-}
-@-o-keyframes cd-bounce-2-inverse {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100px);
-    -ms-transform: translateX(100px);
-    -o-transform: translateX(100px);
-    transform: translateX(100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(-20px);
-    -ms-transform: translateX(-20px);
-    -o-transform: translateX(-20px);
-    transform: translateX(-20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-@keyframes cd-bounce-2-inverse {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100px);
-    -ms-transform: translateX(100px);
-    -o-transform: translateX(100px);
-    transform: translateX(100px);
-  }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(-20px);
-    -ms-transform: translateX(-20px);
-    -o-transform: translateX(-20px);
-    transform: translateX(-20px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
   }
 }
 /*# sourceMappingURL=shopee-1212.css.map */
