--- a/static/less/web/footer.less
+++ b/static/less/web/footer.less
@@ -1,11 +1,11 @@
 .footer {
   text-align: center;
-  background: #f9e723 url(../img/footer-bg.png) no-repeat bottom center;
-  padding-bottom: 255px;
+  background: #F4F4F4 !important;
+  padding-bottom: 60px;
   position: relative;
 
   h3 {
-    margin: 30px 0 50px 0;
+    margin: 30px 0 40px 0;
   }
 
   h4 {
@@ -15,11 +15,11 @@
   }
 
   .appLogoContainer {
-    padding: 50px 0 20px 0;
+    padding: 30px 0 10px 0;
   }
 
   .appLogo {
-    margin: 110px auto 55px;
+    margin: 80px auto 55px;
     background: url("../img/appLogo.png") no-repeat center center;
     background-size: 150px 150px;
     height: 150px;
@@ -77,7 +77,7 @@
   }
 
   @media (max-width: @screen-xs) {
-    padding-bottom: 70px;
+    padding-bottom: 20px;
 
     h3 {
       margin: 10px 0 20px 0;
