--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -1,4 +1,4 @@
-.container.section.artist-profile-block.text-center
+#tokoSeleb.container.section.artist-profile-block.text-center
   h3.subtitle.text-center GET THEIR FAVORITE STUFFS!
 
   .artis-item
