--- a/static/jade/section/share-and-win.jade
+++ b/static/jade/section/share-and-win.jade
@@ -1,4 +1,4 @@
-.share-and-win.section
+#shareAndWin.share-and-win.section
   .container
     h3.subtitle.text-center SHARE &amp; STAND A CHANCE <br />TO WIN IPHONE 6
 
