--- a/static/jade/section/shipping.jade
+++ b/static/jade/section/shipping.jade
@@ -3,4 +3,5 @@
     h3.subtitle.text-center EVERYTHING IN ONE CLICK!
 
   .shipping-content
-    img(src="../img/bg-shipping.png")
+    img.desktop(src="../img/bg-shipping.png")
+    img.mobile(src="../img/bg-shipping-mobile.png")
