--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -1,57 +1,57 @@
-.section.timeline
+#Shopee1212.section.timeline
   .bg-bubble
 
   .container
     #cd-timeline
       .cd-timeline-block
-          .get-your-best-deal
-          .cd-timeline-content
+          .get-your-best-deal.hidden-xs
+          .cd-timeline-content.hidden-xs
             img(src="../img/timeline/timeline-1.png")
 
       .cd-timeline-block
 
-        .cd-timeline-content.selebriti-comment
+        .cd-timeline-content.selebriti-comment.hidden-xs
           img(src="../img/timeline/timeline-2.png")
 
       .cd-timeline-block
 
-        .cd-timeline-content.toko-selebritis
+        .cd-timeline-content.toko-selebritis.hidden-xs
           img(src="../img/timeline/timeline-3.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.incrane1212
+        .cd-timeline-content.incrane1212.hidden-xs
           img(src="../img/timeline/timeline-4.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.daily-checkin
+        .cd-timeline-content.daily-checkin.hidden-xs
           img(src="../img/timeline/timeline-5.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.love-share-win
+        .cd-timeline-content.love-share-win.hidden-xs
           img(src="../img/timeline/timeline-6.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.lelang-barang-artis
+        .cd-timeline-content.lelang-barang-artis.hidden-xs
           img(src="../img/timeline/timeline-7.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.pyramid-discount
+        .cd-timeline-content.pyramid-discount.hidden-xs
           img(src="../img/timeline/timeline-8.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.top-spender-competition
+        .cd-timeline-content.top-spender-competition.hidden-xs
           img(src="../img/timeline/timeline-9.png");
 
       .cd-timeline-block
 
-        .cd-timeline-content.showoff1212
+        .cd-timeline-content.showoff1212.hidden-xs
           img(src="../img/timeline/timeline-10.png");
 
-    .great-sale-bottom
+    .great-sale-bottom.hidden-xs
   .bubble-bottom
