--- a/static/less/web/footer.less
+++ b/static/less/web/footer.less
@@ -77,7 +77,8 @@
   }
 
   @media (max-width: @screen-xs) {
-    padding-bottom: 20px;
+    padding-bottom: 50px;
+    border-top: 1px solid #ddd;
 
     h3 {
       margin: 10px 0 20px 0;
