--- a/static/less/web/navbar.less
+++ b/static/less/web/navbar.less
@@ -1,13 +1,13 @@
 header {
   border-bottom: 1px solid #ccc;
-  height: 70px;
+  height: 122px;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 120;
 
   @media (max-width: @screen-xs) {
-    height: 40px;
+    height: 80px;
     line-height: 40px;
   }
 
@@ -64,7 +64,13 @@ header {
 }
 
 #nav {
-  &.container {
+  border-bottom: 1px solid #ccc;
+
+  @media (max-width: @screen-xs) {
+    height: 40px;
+  }
+
+  .container {
     background-color: transparent;
     font-size: 0;
     text-align: right;
@@ -103,7 +109,7 @@ header {
     vertical-align: middle;
 
     @media (max-width: @screen-xs) {
-      display: none;
+      margin-left: 0;
     }
 
     :hover {
@@ -153,3 +159,91 @@ header {
     }
   }
 }
+
+.main-navigation {
+  text-align: center;
+
+  @media (max-width: @screen-xs) {
+    display: none;
+    margin-top: -1px;
+  }
+
+  &.expanded {
+    .box-shadow(0 2px 4px rgba(0,0,0,.2))
+  }
+}
+
+.navigation {
+  margin: 13px 0 0 0;
+  padding: 0;
+  list-style: none;
+
+  li {
+    display: inline-block;
+    text-align: center;
+    border-right: 1px solid #ccc;
+
+    &:last-child {
+      border-right: 0;
+    }
+
+    a {
+      display: block;
+      font-family: "Roboto";
+      padding: 0 13px;
+      font-weight: 300;
+      font-size: 16px;
+      text-transform: uppercase;
+      text-decoration: none;
+      line-height: 25px;
+      color: #424242;
+
+      &:hover {
+        color: #f1582c
+      }
+    }
+  }
+
+  @media (max-width: @screen-xs) {
+    margin-top: 0;
+    margin-left: -15px;
+    margin-right: -15px;
+
+    li {
+      display: block;
+      background: #fff;
+      border-bottom: 1px solid #ccc;
+      border-right: 0;
+
+      a {
+        line-height: 40px;
+      }
+    }
+  }
+}
+
+.mobile-menu-trigger {
+  display: none;
+
+  @media (max-width: @screen-xs) {
+    text-align: center;
+    line-height: 40px;
+    display: block;
+
+    img {
+      display: inline-block;
+      vertical-align: top;
+      padding-top: 12px;
+    }
+
+    span {
+      font-size: 18px;
+      font-family: "Roboto";
+      font-weight: 600;
+      display: inline-block;
+      color: #4d4d4d;
+      margin-left: 5px;
+    }
+  }
+}
+
