--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -4,54 +4,38 @@
   .container
     #cd-timeline
       .cd-timeline-block
-          .get-your-best-deal.hidden-xs
-          .cd-timeline-content.hidden-xs
-            img(src="../img/timeline/timeline-1.png")
+        .get-your-best-deal
+        .cd-timeline-content.selebriti-comment
+          img(src="../img/timeline/timeline-1.png")
 
       .cd-timeline-block
-
-        .cd-timeline-content.selebriti-comment.hidden-xs
-          img(src="../img/timeline/timeline-2.png")
+        .cd-timeline-content.follow-comment
+          img(src="../img/timeline/timeline-2.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.toko-selebritis.hidden-xs
+        .cd-timeline-content.daily-checkin
           img(src="../img/timeline/timeline-3.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.incrane1212.hidden-xs
+        .cd-timeline-content.pyramid-discount
           img(src="../img/timeline/timeline-4.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.daily-checkin.hidden-xs
+        .cd-timeline-content.road-to
           img(src="../img/timeline/timeline-5.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.love-share-win.hidden-xs
+        .cd-timeline-content.lelang-barang-artis
           img(src="../img/timeline/timeline-6.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.lelang-barang-artis.hidden-xs
+        .cd-timeline-content.the-big-day
           img(src="../img/timeline/timeline-7.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.pyramid-discount.hidden-xs
+        .cd-timeline-content.top-speder-competition
           img(src="../img/timeline/timeline-8.png");
 
       .cd-timeline-block
-
-        .cd-timeline-content.top-spender-competition.hidden-xs
+        .cd-timeline-content.showoff1212
           img(src="../img/timeline/timeline-9.png");
-
-      .cd-timeline-block
-
-        .cd-timeline-content.showoff1212.hidden-xs
-          img(src="../img/timeline/timeline-10.png");
-
-    .great-sale-bottom.hidden-xs
-  .bubble-bottom
