--- a/static/less/web/home.less
+++ b/static/less/web/home.less
@@ -227,7 +227,8 @@
 
           input {
             &.email {
-              width: 200px;
+              width: 220px;
+              margin-left: 15px;
             }
 
             &.button {
@@ -242,6 +243,7 @@
 
 .shipping-block {
   padding-bottom: 0;
+  background: #f4f4f4;
 
   @media (max-width: @screen-xs) {
     padding-top: 10px;
