--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -14,6 +14,8 @@ block main
 
     include section/timeline
 
+    include section/deals
+
     include section/shipping
 
     include section/share-and-win
