hide deals section

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -14,7 +14,7 @@ block main
 
     include section/timeline
 
-    include section/deals
+    //- include section/deals
 
     include section/shipping
 
