udpate some content

--- a/static/jade/include/mixin.jade
+++ b/static/jade/include/mixin.jade
@@ -24,8 +24,8 @@ mixin headerActive(current)
           a(href="#home") Home
         li
           a(href="#tokoSeleb") Toko Seleb
-        li
-          a(href="#1212Sale") 1212 SALE
+        //- li
+        //-   a(href="#1212Sale") 1212 SALE
         li
           a(href="#Shopee1212") #Shopee1212
         li
