--- a/static/jade/section/banner.jade
+++ b/static/jade/section/banner.jade
@@ -2,6 +2,4 @@
   .flexslider
     ul.slides
       li
-        img(src='/img/slider-banner-img.jpg')
-      li
-        img(src='/img/slider-banner-img2.jpg')
+        img(src='/img/shopee-1212-banner.jpg')
